[tool.poetry]
name = "pizza-delivery-api"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo <ducameneses16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
python-dotenv = "^1.0.0"
werkzeug = "^3.0.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
fastapi-jwt-auth = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
